Fix menu overlap and change colours (#31)
* set z-index

* change colours

--- a/website/src/style/components/aside.scss
+++ b/website/src/style/components/aside.scss
@@ -5,6 +5,7 @@
 
   &__container {
     @include tablet {
+      min-height: 100vh;
       position: fixed;
       width: 300px;
       top: 0;
@@ -18,10 +19,12 @@
     display: none;
     flex-direction: column;
     position: absolute;
+    z-index: 40;
 
     @include tablet {
       display: flex;
       position: static;
+      z-index: initial;
     }
 
     &.is-active {
